@@ -45,6 +45,7 @@ private:
 	Gtk::TreeView*						tree_view_displayed_channels;
 	
 	void show_scan_dialog();
+	gboolean channel_exists(const Glib::ustring& channel_name);
 	
 	void on_show();
 	void on_button_scan_clicked();
